@@ -16,7 +16,7 @@
 
 import QtQuick 2.15
 import QtQuick.Controls 2.15
-import QtQuick.Layouts 1.3
+import QtQuick.Layouts 1.15
 import org.kde.kirigami 2.14 as Kirigami
 import org.kde.amarok.currenttrack 1.0
 
